Add db integration
