# src/api/app/controller/exercise_controller.go
@@ -3,10 +3,15 @@ package controller
 import (
 	"fmt"
 	"github.com/gin-gonic/gin"
-	"github.com/igor-ferreira-almeida/workout-api/src/api/app/presentation/exercisedto"
+	"github.com/igor-ferreira-almeida/workout-api/src/api/app/presentation/exercisedto/request"
+	"github.com/igor-ferreira-almeida/workout-api/src/api/app/presentation/exercisedto/response"
+	"github.com/igor-ferreira-almeida/workout-api/src/api/app/service/exercisesvc"
+	"github.com/igor-ferreira-almeida/workout-api/src/api/domain/exercisemd"
 	"net/http"
 	"strconv"
 )
+
+var exerciseService = exercisesvc.Inject()
 
 func MapExerciseRoutes(router *gin.Engine) {
 	exerciseController := ExerciseController{}
@@ -22,7 +27,7 @@ type ExerciseController struct {}
 // @Security ApiKeyAuth
 // @Summary Find exercise by id
 // @Param id path string true "Exercise ID"
-// @Success 200 {object} exercisedto.ExerciseResponse
+// @Success 200 {object} response.ExerciseResponse
 // @Router /exercises/{id} [get]
 func (controller ExerciseController) Find(context *gin.Context) {
 	param := context.Param("id")
@@ -53,26 +58,20 @@ func (controller ExerciseController) Find(context *gin.Context) {
 // @Produce json
 // @Security ApiKeyAuth
 // @Summary Create a new exercise
-// @Param food body exercisedto.ExerciseRequest true "Add an exercise"
-// @Success 201 {object} exercisedto.ExerciseResponse
+// @Param food body request.ExerciseRequest true "Add an exercise"
+// @Success 201 {object} response.ExerciseResponse
 // @Router /exercises [post]
 func (controller ExerciseController) Add(context *gin.Context) {
-	exerciseRequest := exercisedto.ExerciseRequest{}
+	exerciseRequest := request.ExerciseRequest{}
+	err := context.BindJSON(&exerciseRequest)
 
-	//if err != nil {
-	//	errorResponseDTO := errordto.NewErrorResponseDTO(http.StatusText(http.StatusBadRequest), http.StatusBadRequest, "Invalid param for id")
-	//	context.JSON(http.StatusBadRequest, errorResponseDTO)
-	//	return
-	//}
-	//
-	//foodFound, err := foodService.Find(id)
-	//
-	//if err != nil {
-	//	errorResponseDTO := dto.NewErrorResponseDTO(http.StatusText(http.StatusNotFound), http.StatusNotFound, err.Error())
-	//	context.JSON(http.StatusNotFound, errorResponseDTO)
-	//	return
-	//}
-	//
-	//foodResponse := foodresponse.NewFoodResponse(foodFound)
-	context.JSON(http.StatusOK, exerciseRequest)
+	if err != nil {
+
+	}
+
+	// TODO: Tratar erro posteriormente
+	exercise, _ := exerciseService.Add(exercisemd.NewExercise(exerciseRequest))
+
+	exerciseResponse := response.NewExerciseResponse(exercise)
+	context.JSON(http.StatusCreated, exerciseResponse)
 }
