# src/api/app/presentation/exercisedto/exercise_request.go
@@ -1,8 +1,0 @@
-package exercisedto
-
-type ExerciseRequest struct {
-	Name string `json:"name" example:"Bench Press"`
-	MuscularGroup string `json:"muscular_group" example:"Chest"`
-	Reps uint `json:"reps" example:"12"`
-	Rest uint `json:"rest" example:"60"`
-}
