# src/api/app/presentation/exercisedto/exercise_response.go
@@ -1,5 +1,0 @@
-package exercisedto
-
-type ExerciseResponse struct {
-
-}
