# src/api/infrastructure/swagger/docs/swagger.json
@@ -23,12 +23,12 @@
                 "summary": "Create a new exercise",
                 "parameters": [
                     {
-                        "description": "AddExercise an exercise",
+                        "description": "Add an exercise",
                         "name": "food",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/exercisedto.ExerciseRequest"
+                            "$ref": "#/definitions/request.ExerciseRequest"
                         }
                     }
                 ],
@@ -36,7 +36,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/exercisedto.ExerciseResponse"
+                            "$ref": "#/definitions/response.ExerciseResponse"
                         }
                     }
                 }
@@ -72,7 +72,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/exercisedto.ExerciseResponse"
+                            "$ref": "#/definitions/response.ExerciseResponse"
                         }
                     }
                 }
@@ -80,10 +80,10 @@
         }
     },
     "definitions": {
-        "exercisedto.ExerciseRequest": {
+        "request.ExerciseRequest": {
             "type": "object",
             "properties": {
-                "muscular_group": {
+                "muscle_group": {
                     "type": "string",
                     "example": "Chest"
                 },
@@ -94,11 +94,39 @@
                 "reps": {
                     "type": "integer",
                     "example": 12
+                },
+                "rest": {
+                    "type": "integer",
+                    "example": 60
+                },
+                "weight": {
+                    "type": "integer",
+                    "example": 20
                 }
             }
         },
-        "exercisedto.ExerciseResponse": {
-            "type": "object"
+        "response.ExerciseResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "muscular_group": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "reps": {
+                    "type": "integer"
+                },
+                "rest": {
+                    "type": "integer"
+                },
+                "weight": {
+                    "type": "integer"
+                }
+            }
         }
     }
 }
